Fix special chars for spanish