@@ -1,6 +1,5 @@
 package de.ostfale.qk.i18n;
 
-import io.quarkus.logging.Log;
 import jakarta.enterprise.context.RequestScoped;
 import jakarta.ws.rs.core.Context;
 import jakarta.ws.rs.core.HttpHeaders;
@@ -9,8 +8,12 @@ import jakarta.ws.rs.core.UriInfo;
 import java.util.List;
 import java.util.Locale;
 
+import org.jboss.logging.Logger;
+
 @RequestScoped
 public class CurrentRequestLocale {
+
+    private static final Logger LOG = Logger.getLogger(CurrentRequestLocale.class);
 
     @Context
     UriInfo uriInfo;
@@ -21,14 +24,14 @@ public class CurrentRequestLocale {
     public Locale get() {
         String lang = uriInfo.getQueryParameters().getFirst("lang");
         if (lang != null && !lang.isBlank()) {
-            Log.info("Locale from query parameter: " + lang);
+            LOG.info("Locale from query parameter: " + lang);
             return Locale.forLanguageTag(lang);
         }
 
         List<Locale> locales = headers.getAcceptableLanguages();
         if (!locales.isEmpty()) {
-            Log.info("Locale from Accept-Language header: " + locales.getFirst());
-            return locales.getFirst();
+            LOG.info("Locale from Accept-Language header: " + locales.get(0));
+            return locales.get(0);
         }
 
         return Locale.ENGLISH;
